--- a/segmentation.html
+++ b/segmentation.html
@@ -6,6 +6,7 @@
 <script src="libraries/topojson.v1.min.js"></script>
 <script src="libraries/queue.v1.min.js"></script>
 <script src="libraries/d3.tip.v0.6.3.js"></script>
+<link rel="stylesheet" href="libraries/tool-tip-style.css">
 <style>
 line {
   stroke-width:1;
@@ -38,34 +39,7 @@ line {
 .meanHoverHide{
   color: silver;
 }
-.d3-tip {
-  line-height: 1;
-  font-weight: bold;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  border-radius: 2px;
-}
 
-/* Creates a small triangle extender for the tooltip */
-.d3-tip:after {
-  box-sizing: border-box;
-  display: inline;
-  font-size: 10px;
-  width: 100%;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
-  content: "\25BC";
-  position: absolute;
-  text-align: center;
-}
-
-.d3-tip.e:after {
-  content: "\25C0";
-  margin: -4px 0 0 0;
-  top: 50%;
-  left: -8px;
-}
 
 </style>
 </head>
@@ -122,7 +96,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
   var padding = {top: 0.006*containerSize.height, right: 0.006*containerSize.width, bottom: 0.3*containerSize.height, left: 0.02*containerSize.width};
   var width = containerSize.width - margin.right - margin.left; //Chart width
   var height = containerSize.height - margin.top - margin.bottom; //Chart height
-  
+
   var segChart = d3.select('#segChart').append('svg') //http://bl.ocks.org/mbostock/3019563
         .attr({
           height: height + margin.top + margin.bottom,
@@ -130,7 +104,7 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
         })
       .append('g')
       .attr("transform", "translate(" + (margin.left) + "," + (margin.top)+ ")");//moving the origin to the point where it starts
-  
+
   var xScale = d3.scale.ordinal() //the ordinal scale uses dotpositions to place them on charts
       .domain(xDomain)
       .rangeBands([padding.left, width], .1);
@@ -158,12 +132,16 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
   //TOOL-TIP
   var tip = d3.tip()
       .attr('class', 'd3-tip')
-      .offset([0, 10])
+      .offset([14, 10])
       .direction('e')
       .html(function(d) {
-          return "<strong>Segmentation:</strong> <span style='color:red'>" + d.seg + "</span>";
+          return "<strong>State:</strong> <span style='color:silver'>" + d.state + "</span>" + "<br>" + 
+          "<strong>Centre:</strong> <span style='color:silver'>" + d.centre + "</span>" + "<br>" +
+          "<strong>Segmentation:</strong> <span style=" + "'" + "color:" + colorScale(d.seg) +"'" +">" + d.seg + "</span>"
+          ;
     })
     segChart.call(tip)
+
   //DRAWING THE DIFFERENT ELEMENTS
   segChart.append('g')
       .selectAll('.zoneLab') //corresponding to each column of dots
@@ -210,12 +188,12 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       })
       .attr("fill-opacity", "0")
       .style('cursor', 'default')
+      .style('pointer-events', 'all')
       .on('mouseover', mouseoverRect)
       .on('mouseout', mouseoutRect);
 
   segChart.append('g') //Adding the axis to the bottom of the first panel
       .attr('class', 'y-axis')
-      //.attr("transform", "translate(" + (3*containerPadding.left) + ", 0)")
       .style('cursor', 'default')
       .call(yAxis)
 
@@ -253,7 +231,8 @@ function ready(error, segmentation, segZoneLabels, segItemLabels){
       .style('text-anchor', 'middle')
       .style('cursor', 'default')
       .on('mouseover', mouseoverCross)
-      .on('mouseout', mouseoutCross);
+      .on('mouseout', mouseoutCross)
+      .style('pointer-events', 'none');
 
   segChart.append('g')
       .selectAll('.meanLines')
