--- a/brush.html
+++ b/brush.html
@@ -34,7 +34,10 @@
   stroke: #000;
   stroke-opacity: .5;
   stroke-width: 1.25px;
-  cursor: crosshair;
+  pointer-events:none;
+}
+.brushrect {
+  fill:rgb(250,250,250);
 }
 </style>
 <body>
@@ -84,7 +87,8 @@ svg.append("g")
       .scale(x)
       .orient("bottom")
       .ticks(d3.time.days)
-      .tickPadding(0))
+      .tickSize(0)
+      .tickPadding(12))
   .select(".domain")
   .select(function() { return this.parentNode.appendChild(this.cloneNode(true)); })
     .attr("class", "halo");
@@ -93,11 +97,11 @@ var slider = svg.append("g")
     .attr("class", "slider")
     .call(brush);
 
-// slider.selectAll(".extent,.resize")
-//     .remove();
+// slider.selectAll(".extent,.resize").remove();
 
 slider.selectAll("rect")
-    .attr("height", height);
+    .attr("height", height)
+    .attr('class','brushrect');
 
 slider.select(".background")
     .attr("height", height);
@@ -105,37 +109,35 @@ slider.select(".background")
 var handle1 = slider.append("circle")
     .attr("class", "handle")
     .attr("transform", "translate("+x(new Date(2013, 2, 1))+"," + height / 2 + ")")
+    .attr("cx",x(new Date(2013, 2, 1)))
     .attr("r", 9);
 
 var handle2 = slider.append("circle")
     .attr("class", "handle")
-    .attr("transform", "translate("+x(new Date(2013, 2, 3))+"," + height / 2 + ")")
+    .attr("transform", "translate("+x(new Date(2013, 2, 1))+"," + height / 2 + ")")
+    .attr("cx",x(new Date(2013, 2, 3)))
     .attr("r", 9);
 
 function brushed() {
   var extent0 = brush.extent(),
       extent1;
 
-  // if dragging, preserve the width of the extent
-  if (d3.event.mode === "move") {
-    var d0 = d3.time.day.round(extent0[0]),
-        d1 = d3.time.day.offset(d0, Math.round((extent0[1] - extent0[0]) / 864e5));
-    extent1 = [d0, d1];
-  }
-
-  // otherwise, if resizing, round both dates
-  else {
+  if (brush.empty()===false) {
+    console.log(extent0)
     extent1 = extent0.map(d3.time.day.round);
 
     // if empty when rounded, use floor & ceil instead
-    if (extent1[0] >= extent1[1]) {
-      extent1[0] = d3.time.day.floor(extent0[0]);
-      extent1[1] = d3.time.day.ceil(extent0[1]);
-    }
+    // if (extent1[0] >= extent1[1]) {
+    //   extent1[0] = d3.time.day.floor(extent0[0]);
+    //   extent1[1] = d3.time.day.ceil(extent0[1]);
+    // }
+
+    d3.select(this).call(brush.extent(extent1));
+    console.log(brush.extent())
+    handle1.attr('cx',x(extent1[0]))
+    handle2.attr('cx',x(extent1[1]))
   }
 
-  d3.select(this).call(brush.extent(extent1));
-  console.log(brush.extent())
 }
 
 
