--- a/histogram.html
+++ b/histogram.html
@@ -22,7 +22,7 @@
 <body>
 
 <div id="main">
-  <select id="productSelect">
+  <select id="productSelectPrice">
     <option selected value="Cement Dangote">Cement Dangote</option>
     <option value="Drink Swan Water Bottle">Drink Swan Water Bottle</option>
     <option value="Maize White">Maize White</option>
@@ -31,27 +31,12 @@
     <option value="Rice Local">Rice Local</option>
     <option value="Sorghum">Sorghum</option>
   </select>
-  <div id="histChart"></div>
+  <div id="histogramContainer"></div>
 </div>
 
 </body>
 <script>
-function getData(data, histogram){
-  var histData = histogram(data); //create the array of arrays with hist data
-  array = [];//empty array to populate
-  histData.forEach(function(d){
-    var y = d.x // gives the vertical position of the dots
-    var dy = d.dx //the width of the bin
-    var x = d.y //this gives the number of dots
-    d.forEach(function(e, i){
-      e.y = y;
-      e.dy = dy;
-      e.x = x - i; //reversing the order since the hist layout sets the highest value in the lowest position in the array
-      array.push(e)
-    })
-  })
-  return array
-}
+
 function setBins(max,min) {
     var bounds = [];
     for (var i=1;i<=5;i++) { // create 5 equally sized bins between min*.95 and max*1.05
@@ -71,7 +56,7 @@ function ready(error, allData){
 
   var startDate = dateFormat.parse('2009-01-01'); //This will be based on user inputs
   var endDate = dateFormat.parse('2012-12-01'); //This will be based on user inputs
-  var sel = document.getElementById('productSelect'); //selecting the default based on currentinput
+  var sel = document.getElementById('productSelectPrice'); //selecting the default based on currentinput
   var product = sel.options[sel.selectedIndex].value;
   var data = allData.filter(function(d){return d.item == product && dateFormat.parse(d.date)>= startDate && dateFormat.parse(d.date) <= endDate});
 
@@ -82,7 +67,7 @@ function ready(error, allData){
   var width = containerSize.width - margin.right - margin.left; //Chart width
   var height = containerSize.height - margin.top - margin.bottom; //Chart height
 
-  var histChart = d3.select('#histChart').append('svg') //http://bl.ocks.org/mbostock/3019563
+  var histChart = d3.select('#histogramContainer').append('svg') //http://bl.ocks.org/mbostock/3019563
         .attr({
           height: height + margin.top + margin.bottom,
           width: width + margin.left + margin.right
@@ -169,8 +154,8 @@ function ready(error, allData){
       .attr('fill', 'silver');
 
   //MARKING THE NEW PRODUCT SELECTION AND CALLING THE REDRAW FUNCTION
-  d3.select('#productSelect') //changes the product based on user input from the dropdown menu
-    .on('change', function(d) {
+  d3.select('#productSelectPrice') //changes the product based on user input from the dropdown menu
+    .on('change.histogram', function(d) {
         var product = d3.select(this).property('value')
         redraw(product)
     })
@@ -214,6 +199,23 @@ function ready(error, allData){
         .tickValues([min*.95]
         .concat(bounds));
     axisLine.call(axis)
+  }
+
+  function getData(data, histogram){
+    var histData = histogram(data); //create the array of arrays with hist data
+    array = [];//empty array to populate
+    histData.forEach(function(d){
+      var y = d.x // gives the vertical position of the dots
+      var dy = d.dx //the width of the bin
+      var x = d.y //this gives the number of dots
+      d.forEach(function(e, i){
+        e.y = y;
+        e.dy = dy;
+        e.x = x - i; //reversing the order since the hist layout sets the highest value in the lowest position in the array
+        array.push(e)
+      })
+    })
+    return array
   }
 }
 
