--- a/brush.html
+++ b/brush.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link href="libraries/jquery-ui/jquery-ui.css" rel="stylesheet">
 <style>
 
-/*.brush .extent {
-  stroke: #000;
-  fill-opacity: .125;
-  shape-rendering: crispEdges;
-}*/
 .axis {
   font: 10px sans-serif;
   -webkit-user-select: none;
@@ -14,131 +10,86 @@
   user-select: none;
 }
 
-.axis .domain {
+.axis line {
   fill: none;
-  stroke: #000;
-  stroke-opacity: .3;
-  stroke-width: 10px;
-  stroke-linecap: round;
+  stroke: black;
+  stroke-width:1px;
+  shape-rendering:crispEdges;
+}
+.axis path {
+  fill:none;
 }
 
-.axis .halo {
-  fill: none;
-  stroke: #ddd;
-  stroke-width: 8px;
-  stroke-linecap: round;
+#slider {
+  width:300px;
+  margin-left:20px;
+  margin-right:20px;
+  margin-top:-15px;
 }
 
-.slider .handle {
-  fill: #fff;
-  stroke: #000;
-  stroke-opacity: .5;
-  stroke-width: 1.25px;
-  pointer-events:none;
-}
-.brushrect {
-  fill:rgb(250,250,250);
-}
 </style>
 <body>
 <script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="libraries/jquery-1.8.3.min.js"></script>
+<script src="libraries/jquery-ui/jquery-ui.js"></script>
+<div id="sliderContainer">
+  <div id="sliderAxis"></div>
+  <div id="slider"></div>
+
+</div>
+
 <script>
 
-var margin = {top: 200, right: 40, bottom: 200, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+var months = [];
+
+for (var i=2009; i<=2012;i++) {
+  for (var j=0;j<=11;j++) {
+    months.push(new Date(i,j,1))
+  }
+}
+var monthFormat = d3.time.format("%b-%y");
+
+var margin = {top: 0, right: 20, bottom: 0, left: 20},
+    width = 340 - margin.left - margin.right,
+    height = 30 - margin.top - margin.bottom;
 
 var x = d3.time.scale()
-    .domain([new Date(2013, 2, 1), new Date(2013, 2, 15) - 1])
+    .domain([months[0], months[months.length-1]])
     .range([0, width]);
 
-var brush = d3.svg.brush()
-    .x(x)
-    .extent([new Date(2013, 2, 1), new Date(2013, 2, 3)])
-    .on("brush", brushed);
-
-var svg = d3.select("body").append("svg")
+var svg = d3.select("#sliderAxis").append("svg")
     .attr("width", width + margin.left + margin.right)
     .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+    .append("g")
+    .attr("transform", "translate(" + margin.left + "," + (20) + ")");
 
-// svg.append("rect")
-//     .attr("class", "grid-background")
-//     .attr("width", width)
-//     .attr("height", height);
-
-// svg.append("g")
-//     .attr("class", "x grid")
-//     .attr("transform", "translate(0," + height + ")")
-//     .call(d3.svg.axis()
-//         .scale(x)
-//         .orient("bottom")
-//         .ticks(d3.time.hours, 12)
-//         .tickSize(-height)
-//         .tickFormat(""))
-//   .selectAll(".tick")
-//     .classed("minor", function(d) { return d.getHours(); });
-
-svg.append("g")
+var axis = d3.svg.axis()
+  .scale(x)
+  .orient("top")
+  .tickPadding(5)
+  .tickSize(5)
+  .tickValues(months)
+  .tickFormat(function(d, i) {
+        if (d===months[0] || d===months[months.length-1]) return monthFormat(d);
+    });
+var g = svg.append("g")
     .attr("class", "x axis")
-    .attr("transform", "translate(0," + height/2 + ")")
-    .call(d3.svg.axis()
-      .scale(x)
-      .orient("bottom")
-      .ticks(d3.time.days)
-      .tickSize(0)
-      .tickPadding(12))
-  .select(".domain")
-  .select(function() { return this.parentNode.appendChild(this.cloneNode(true)); })
-    .attr("class", "halo");
+    .call(axis)
 
-var slider = svg.append("g")
-    .attr("class", "slider")
-    .call(brush);
-
-// slider.selectAll(".extent,.resize").remove();
-
-slider.selectAll("rect")
-    .attr("height", height)
-    .attr('class','brushrect');
-
-slider.select(".background")
-    .attr("height", height);
-
-var handle1 = slider.append("circle")
-    .attr("class", "handle")
-    .attr("transform", "translate("+x(new Date(2013, 2, 1))+"," + height / 2 + ")")
-    .attr("cx",x(new Date(2013, 2, 1)))
-    .attr("r", 9);
-
-var handle2 = slider.append("circle")
-    .attr("class", "handle")
-    .attr("transform", "translate("+x(new Date(2013, 2, 1))+"," + height / 2 + ")")
-    .attr("cx",x(new Date(2013, 2, 3)))
-    .attr("r", 9);
-
-function brushed() {
-  var extent0 = brush.extent(),
-      extent1;
-
-  if (brush.empty()===false) {
-    console.log(extent0)
-    extent1 = extent0.map(d3.time.day.round);
-
-    // if empty when rounded, use floor & ceil instead
-    // if (extent1[0] >= extent1[1]) {
-    //   extent1[0] = d3.time.day.floor(extent0[0]);
-    //   extent1[1] = d3.time.day.ceil(extent0[1]);
-    // }
-
-    d3.select(this).call(brush.extent(extent1));
-    console.log(brush.extent())
-    handle1.attr('cx',x(extent1[0]))
-    handle2.attr('cx',x(extent1[1]))
+$( "#slider" ).slider({
+  range: true,
+  min: 0,
+  max: months.length-1,
+  values: [0, months.length-1],
+  slide: function( event, ui ) {
+    console.log(ui.value)
+    axis.tickFormat(function(d, i) {
+        if (d===months[ui.values[0]] || d===months[ui.values[1]]) return monthFormat(d);
+    });
+    g.call(axis)
   }
+});
 
-}
 
 
 
